[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/counter/counter_area.gd" type="Script" id=1]
[ext_resource path="res://src/ui/sheep_counter_area/SheepCounterUI.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.788235, 0.403922, 0.898039, 0.470588 )

[node name="CounterArea" type="Area"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="UI" type="Node" parent="."]

[node name="SheepCounterUI" parent="UI" instance=ExtResource( 2 )]

[connection signal="body_entered" from="." to="." method="_on_CounterArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_CounterArea_body_exited"]
